<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Duck Duck Go Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_submit">Submit</string>
    <string name="title_activity_query_async_task">Query With AsyncTask</string>
    <string name="hint_query">query</string>
    <string name="no_definition">No Definition</string>
    <string name="radiobutton_asynctask">Query Using AsyncTask</string>
    <string name="radiobutton_robospice">Query Using Robospice</string>
    <string name="radiobutton_rxjava">Query Using RxJava</string>
    <string name="title_activity_query_robospice">Query With Robospice</string>
    <string name="title_activity_query_rxjava">Query With RxJava</string>
    <string name="no_results">No Results Found</string>
    <string name="dialog_title_searching">Searching...</string>
    <string name="search_error">Search Error Occurred - Try Again.</string>

</resources>
