<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".MainActivity">

        <EditText
            android:id="@+id/edittext_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:hint="@string/hint_query"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RadioButton
                android:id="@+id/radiobutton_asynctask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_asynctask"
                android:onClick="onRadioButtonToggle"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/radiobutton_robospice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_robospice"
                android:onClick="onRadioButtonToggle"
                />
            <RadioButton
                android:id="@+id/radiobutton_rxjava"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_rxjava"
                android:onClick="onRadioButtonToggle"
                />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_submit"
            />

    </LinearLayout>
</ScrollView>